--- a/TTT-master/index.html
+++ b/TTT-master/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>TTT</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -12,7 +12,25 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body class="container-fluid">
-      <h1>Example</h1>
+      <h1>TIC TAC TOE</h1>
+
+      <div class="container">
+    <div class="row">
+          <div class="col-xs-4 box">.col-xs-4 </div>
+          <div class="col-xs-4 box">.col-xs-4 </div>
+          <div class="col-xs-4 box">.col-xs-4 </div>
+      </div>
+      <div class="row">
+          <div class="col-xs-4 box">.col-xs-4 </div>
+          <div class="col-xs-4 box">.col-xs-4 </div>
+          <div class="col-xs-4 box">.col-xs-4 </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-4 box">.col-xs-4 </div>
+          <div class="col-xs-4 box">.col-xs-4 </div>
+          <div class="col-xs-4 box">.col-xs-4 </div>
+    </div>
+  </div>
 
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
       eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
