Commit early game logic and working board Finds winner, places x's and o's, working on buttons still. reset is not working yet.

--- a/index.html
+++ b/index.html
@@ -66,23 +66,34 @@
       </div>
     </div>
   </div>
-
-  <div class="grid">
+    <p id='turn-message'>  </p>
+  <div class="grid" id="new-game">
     <div class="row">
+          <div class="col-xs-4 box" id='0'> </div>
           <div class="col-xs-4 box" id='1'> </div>
           <div class="col-xs-4 box" id='2'> </div>
-          <div class="col-xs-4 box" id='3'> </div>
       </div>
       <div class="row">
+          <div class="col-xs-4 box" id='3'> </div>
           <div class="col-xs-4 box" id='4'> </div>
           <div class="col-xs-4 box" id='5'> </div>
-          <div class="col-xs-4 box" id='6'> </div>
         </div>
         <div class="row">
+          <div class="col-xs-4 box" id='6'> </div>
           <div class="col-xs-4 box" id='7'> </div>
           <div class="col-xs-4 box" id='8'> </div>
-          <div class="col-xs-4 box" id='9'> </div>
         </div>
     </div>
+    <!-- <form id="sign-out">
+      <fieldset>
+        <legend>Sign Out</legend>
+        <input type="submit" name="submit" value="Sign Out!">
+      </fieldset>
+    </form> -->
+    <form id="reset">
+      <fieldset>
+        <input type="reset" name="reset">
+      </fieldset>
+    </form>
   </body>
 </html>
