--- a/index.html
+++ b/index.html
@@ -41,6 +41,20 @@
         menu
       </button>
       <div class="dropdown-menu dropdown-menu-right">
+        <form id="create-game">
+          <fieldset>
+            <legend>New Game</legend>
+            <input type="submit" name="submit" value="New Game">
+          </fieldset>
+        </form>
+        <div class="dropdown-divider"></div>
+        <form id="update-game">
+          <fieldset>
+            <legend>Game History</legend>
+            <input type="submit" name="submit" value="New Game">
+          </fieldset>
+        </form>
+        <div class="dropdown-divider"></div>
         <form id="change-password">
           <fieldset>
             <legend>Change Password</legend>
