Debugging extra code Patch and game-history still not fully functioning, cleaned up other unnecessary left over code.

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
           </fieldset>
         </form>
         <div class="dropdown-divider"></div>
-        <form id="update-game">
+        <form id="game-history">
           <fieldset>
             <legend>Game History</legend>
-            <input type="submit" name="submit" value="New Game">
+            <input type="submit" name="submit" value="Get Game History">
           </fieldset>
         </form>
         <div class="dropdown-divider"></div>
@@ -131,6 +131,14 @@
         </div>
       </div>
     </div> -->
+    <div>
+    <form id="reset">
+      <fieldset>
+        <legend>Reset</legend>
+        <input type="submit" value="Reset the board">
+      </fieldset>
+    </form>
+  </div>
   </aside>
    <h3 id='turn-message'> X's Turn </h3>
         <h2 id='winner'></h2>
@@ -151,14 +159,7 @@
           <div class="col-xs-4 box" id='8'> </div>
         </div>
     </div>
-    <div>
-    <form id="reset">
-      <fieldset>
-        <legend>Reset</legend>
-        <input type="submit" value="Reset the board">
-      </fieldset>
-    </form>
-  </div>
+
     <!-- <form id="sign-out">
       <fieldset>
         <legend>Sign Out</legend>
