--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <fieldset>
       <legend>Sign up!</legend>
       <input type="text" name="credentials[email]" placeholder="Enter Email">
-      <input type="text" name="credentials[password]" placeholder="Enter Password">
-      <input type="text" name="credentials[password-confirmation]" placeholder="Confirm Password">
+      <input type="password" name="credentials[password]" placeholder="Enter Password">
+      <input type="password" name="credentials[password-confirmation]" placeholder="Confirm Password">
       <input type="submit" name="submit" value="Sign up!">
     </fieldset>
     <h4>OR</h4>
@@ -30,7 +30,7 @@
     <fieldset>
       <legend>Sign In!</legend>
       <input type="text" name="credentials[email]" placeholder="Enter Email">
-      <input type="text" name="credentials[password]" placeholder="Enter Password">
+      <input type="password" name="credentials[password]" placeholder="Enter Password">
       <input type="submit" name="submit" value="Sign in!">
     </fieldset>
   </form>
