--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         menu
       </button>
       <div class="dropdown-menu dropdown-menu-right">
-        <form id="create-game">
-          <fieldset>
+        <!-- <form id="create-game"> -->
+          <!-- <fieldset>
             <legend>New Game</legend>
             <input type="submit" name="submit" value="New Game">
           </fieldset>
-        </form>
+        </form> -->
         <div class="dropdown-divider"></div>
         <form id="game-history">
           <fieldset>
@@ -75,10 +75,10 @@
       </div>
     </div>
     <div>
-    <form id="reset">
+    <form id="create-game">
       <fieldset>
-        <legend>Reset</legend>
-        <input type="submit" value="Reset the board">
+        <legend>New Game!</legend>
+        <input type="submit" value="New Game">
       </fieldset>
     </form>
   </div>
