--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <form id="change-password">
           <fieldset>
             <legend>Change Password</legend>
-            <input type="text" name="passwords[old]" placeholder="Enter Old Password">
-            <input type="text" name="passwords[new]" placeholder="Enter New Password">
+            <input type="password" name="passwords[old]" placeholder="Enter Old Password">
+            <input type="password" name="passwords[new]" placeholder="Enter New Password">
             <input type="submit" name="submit" value="Change Password!">
           </fieldset>
         </form>
