--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <legend>Sign up!</legend>
       <input type="text" name="credentials[email]" placeholder="Enter Email">
       <input type="password" name="credentials[password]" placeholder="Enter Password">
-      <input type="password" name="credentials[password-confirmation]" placeholder="Confirm Password">
+      <input type="password" name="credentials[password_confirmation]" placeholder="Confirm Password">
       <input type="submit" name="submit" value="Sign up!">
     </fieldset>
     <h4>OR</h4>
